--- a/代码/ChefAdia-master/.gitignore
+++ b/代码/ChefAdia-master/.gitignore
@@ -95,4 +95,7 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+ChefAdia.xcodeproj/project.xcworkspace/contents.xcworkspacedata
+
+*.DS_Store
 
