--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 *.xcuserstate
 
 *.pbxproj
+
+代码/ChefAdia-master/ChefAdia.xcworkspace/xcuserdata/kylin.xcuserdatad/UserInterfaceState.xcuserstate
+
+*.xcuserstate
